# ex_mail_parser

./: CHANGELOG.md  LICENSE-MIT  README.md  RELEASE_CHECKLIST.md  mix.exs
.github/workflows/: ci.yml  release.yml  rust-ci.yml
lib/: ex_mail_parser.ex  mail_parser.ex
lib/ex_mail_parser/: attachment.ex  header.ex  message_part.ex
lib/mail_parser/: header.ex
native/ex_mail_parser_nif/: Cargo.toml  README.md  config.toml
native/ex_mail_parser_nif/src/: lib.rs
native/mail_parser_nif/: Cargo.toml
native/mail_parser_nif/src/: lib.rs
test/: mail_parser_test.exs
test/fixtures/: example.txt
