[package]
name = "mail_parser_nif"
version = "0.1.0"
authors = ["swerter"]
edition = "2021"
repository = "https://github.com/MigaduMail/ex_mail_parser"
keywords = ["elixir"]

[lib]
name = "mail_parser_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mail-parser = { version = "0.10.2", default-features = false }
rustler = "0.29.1"

[profile.release]
strip = "debuginfo"
lto = true
