[package]
name = "mail_parser_nif"
version = "0.1.0"
authors = ["swerter"]
edition = "2021"
repository = "https://github.com/migadu/ex_mail_parser"
keywords = ["elixir"]

[lib]
name = "mail_parser_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
mail-parser = { version = "0.10.2", default-features = false }
rustler = { version = "0.36.1", default-features = false, features = ["derive"] }

# And then, your features.
[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
